--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>InvokeAI - A Stable Diffusion Toolkit</title>
+  <title>RocketAI - Empowering Brands with AI</title>
   <link rel="shortcut icon" type="icon" href="favicon.ico" />
 </head>
 
