--- a/static/dream_web/index.html
+++ b/static/dream_web/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-  <title>Stable Diffusion Dream Server</title>
+  <title>RocketAI Server</title>
   <meta charset="utf-8">
   <link rel="icon" type="image/x-icon" href="static/dream_web/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1>Stable Diffusion Dream Server</h1>
+    <h1>RocketAI Server</h1>
     <div id="about">
       For news and support for this web service, visit our <a href="http://github.com/lstein/stable-diffusion">GitHub
         site</a>
